<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_key_autolight"
            android:summary="@string/preference_autolight_summary"
            android:title="@string/preference_autolight_title"
            app:iconSpaceReserved="false" />

    <ListPreference
            android:defaultValue="0"
            android:entries="@array/sort_orders"
            android:entryValues="@array/sort_order_keys"
            android:key="@string/preference_key_sort"
            android:summary="@string/preference_sort_summary"
            android:title="@string/preference_sort_title"
            app:iconSpaceReserved="false" />

    <Preference
            android:key="@string/preference_key_backup"
            android:summary="@string/preference_backup_summary"
            android:title="@string/preference_backup_title"
            app:iconSpaceReserved="false" />

</PreferenceScreen>