<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:custom="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_share"
            android:title="@string/menu_share"
            android:icon="@drawable/ic_pass_share_24"
            custom:showAsAction="ifRoom" />

    <item
            android:id="@+id/menu_light"
            android:title="@string/menu_light"
            android:icon="@drawable/ic_pass_brightness_24"
            custom:showAsAction="ifRoom" />

    <item
            android:id="@+id/menu_edit"
            android:title="@string/menu_edit"
            android:icon="@drawable/ic_pass_edit_24"
            custom:showAsAction="ifRoom" />

    <item
            android:id="@+id/menu_print"
            android:title="@string/menu_print"
            android:icon="@drawable/ic_pass_print_24"
            custom:showAsAction="ifRoom" />

    <item
            android:id="@+id/menu_delete"
            android:title="@string/menu_move_to_trash"
            android:icon="@drawable/ic_pass_delete_24"
            custom:showAsAction="ifRoom" />
</menu>
